test/litest.c
@@ -368,6 +368,7 @@ extern struct litest_test_device litest_elantech_touchpad_device;
 extern struct litest_test_device litest_mouse_gladius_device;
 extern struct litest_test_device litest_mouse_wheel_click_angle_device;
 extern struct litest_test_device litest_apple_keyboard_device;
+extern struct litest_test_device litest_anker_mouse_kbd_device;
 
 struct litest_test_device* devices[] = {
 	&litest_synaptics_clickpad_device,
@@ -402,6 +403,7 @@ struct litest_test_device* devices[] = {
 	&litest_mouse_gladius_device,
 	&litest_mouse_wheel_click_angle_device,
 	&litest_apple_keyboard_device,
+	&litest_anker_mouse_kbd_device,
 	NULL,
 };
 
