test/litest.h
@@ -145,6 +145,7 @@ enum litest_device_type {
 	LITEST_MOUSE_GLADIUS = -31,
 	LITEST_MOUSE_WHEEL_CLICK_ANGLE = -32,
 	LITEST_APPLE_KEYBOARD = -33,
+	LITEST_ANKER_MOUSE_KBD = -34,
 };
 
 enum litest_device_feature {
